Use \bibnobreakspace rather than \nobreakspace

--- a/tex/p028.tex
+++ b/tex/p028.tex
@@ -81,7 +81,7 @@
 \vs p028 6:17 Service --- purposeful service, not slavery --- is productive of the highest satisfaction and is expressive of the divinest dignity. Service --- more service, increased service, difficult service, adventurous service, and at last divine and perfect service --- is the goal of time and the destination of space. But ever will the play cycles of time alternate with the service cycles of progress. And after the service of time there follows the superservice of eternity. During the play of time you should envision the work of eternity, even as you will, during the service of eternity, reminisce the play of time.
 \vs p028 6:18 \pc The universal economy is based on intake and output; throughout the eternal career you will never encounter monotony of inaction or stagnation of personality. Progress is made possible by inherent motion, advancement grows out of the divine capacity for action, and achievement is the child of imaginative adventure. But inherent in this capacity for achievement is the responsibility of ethics, the necessity for recognizing that the world and the universe are filled with a multitude of differing types of beings. All of this magnificent creation, \bibemph{including yourself,} was not made just for you. This is not an egocentric universe. The Gods have decreed, “It is more blessed to give than to receive,” and said your Master Son, \textcolour{ubdarkred}{“He who would be greatest among you let him be server of all.”}
 \vs p028 6:19 \pc The real nature of any service, be it rendered by man or angel, is fully revealed in the faces of these secoraphic service indicators, the Sanctities of Service. The full analysis of the true and of the hidden motives is clearly shown. These angels are indeed the mind readers, heart searchers, and soul revealers of the universe. Mortals may employ words to conceal their thoughts, but these high seconaphim lay bare the deep motives of the human heart and of the angelic mind.
-\vs p028 6:20 \kern0.3em 6 and 7.\nobreakspace\bibemph{The Secret of Greatness and the Soul of Goodness.} The ascending pilgrims having awakened to the import of time, the way is prepared for the realization of the solemnity of trust and for the appreciation of the sanctity of service. While these are the moral elements of greatness, there are also secrets of greatness. When the spiritual tests of greatness are applied, the moral elements are not disregarded, but the quality of unselfishness revealed in disinterested labour for the welfare of one’s earthly fellows, particularly worthy beings in need and in distress, that is the real \bibemph{measure} of planetary greatness. And the \bibemph{manifestation} of greatness on a world like Urantia is the exhibition of self\hyp{}control. The great man is not he who “takes a city” or “overthrows a nation,” but rather “he who subdues his own tongue.”
+\vs p028 6:20 \kern0.3em 6 and 7.\bibnobreakspace\bibemph{The Secret of Greatness and the Soul of Goodness.} The ascending pilgrims having awakened to the import of time, the way is prepared for the realization of the solemnity of trust and for the appreciation of the sanctity of service. While these are the moral elements of greatness, there are also secrets of greatness. When the spiritual tests of greatness are applied, the moral elements are not disregarded, but the quality of unselfishness revealed in disinterested labour for the welfare of one’s earthly fellows, particularly worthy beings in need and in distress, that is the real \bibemph{measure} of planetary greatness. And the \bibemph{manifestation} of greatness on a world like Urantia is the exhibition of self\hyp{}control. The great man is not he who “takes a city” or “overthrows a nation,” but rather “he who subdues his own tongue.”
 \vs p028 6:21 Greatness is synonymous with divinity. God is supremely great and good. \bibemph{Greatness and goodness simply cannot be divorced.} They are forever made one in God. This truth is literally and strikingly illustrated by the reflective interdependence of the Secret of Greatness and the Soul of Goodness, for neither can function without the other. In reflecting other qualities of divinity, the superuniverse seconaphim can and do act alone, but the reflective estimates of greatness and of goodness appear to be inseparable. Hence, on any world, in any universe, must these reflectors of greatness and of goodness work together, always showing a dual and mutually dependent report of every being upon whom they focalize. Greatness cannot be estimated without knowing the content of goodness, while goodness cannot be portrayed without exhibiting its inherent and divine greatness.
 \vs p028 6:22 The estimate of greatness varies from sphere to sphere. To be great is to be Godlike. And since the quality of greatness is wholly determined by the content of goodness, it follows that, even in your present human estate, if you can through grace become good, you are thereby becoming great. The more steadfastly you behold, and the more persistently you pursue, the concepts of divine goodness, the more certainly will you grow in greatness, in true magnitude of genuine survival character.
 \usection{Ministry of the Seconaphim}
