--- a/tex/p031.tex
+++ b/tex/p031.tex
@@ -102,5 +102,5 @@
 \vsetoff
 \vs p031 10:21 [Jointly sponsored by a Divine Counsellor and One without Name and Number authorized so to function by the Ancients of Days on Uversa.]
 \vs p031 10:22 \separatorline
-\vs p031 10:23 These 31 papers depicting the nature of Deity, the reality of Paradise, the organization and working of the central and superuniverses, the personalities of the grand universe, and the high destiny of evolutionary mortals, were sponsored, formulated, and put into English by a high commission consisting of 24 Orvonton administrators acting in accordance with a mandate issued by the Ancients of Days of Uversa directing that we should do this on Urantia, 606 of Satania, in Norlatiadek of Nebadon, in the year A.D.\,1934.
+\vs p031 10:23 These 31 papers depicting the nature of Deity, the reality of Paradise, the organization and working of the central and superuniverses, the personalities of the grand universe, and the high destiny of evolutionary mortals, were sponsored, formulated, and put into English by a high commission consisting of 24 Orvonton administrators acting in accordance with a mandate issued by the Ancients of Days of Uversa directing that we should do this on Urantia, 606 of Satania, in Norlatiadek of Nebadon, in the year A.D.\,1934\fnst{Specification of this date does not necessarily imply that no materials published after 1934 were used in subsequent editing and preparation of this Revelation.}.
 \quizlink
