Tidy up some of the notes

--- a/tex/p058.tex
+++ b/tex/p058.tex
@@ -18,12 +18,12 @@
 \vs p058 1:7 \pc On a planet where life has a marine origin the ideal conditions for life implantation are provided by a large number of inland seas, by an extensive shore line of shallow waters and sheltered bays; and just such a distribution of the earth’s waters was rapidly developing. These ancient inland seas were seldom over 150--180\,m deep, and sunlight can penetrate ocean water for more than 180\,m\fnst{The density of most liquids decreases with increasing temperature, but water is an exception to this rule. In the region of temperatures 0--3\,°C for the salty ocean water or 0--4\,°C for the fresh water, the density \bibemph{increases} with increasing temperature, reaching the maximum density at the temperature 3\,°C for the salty and 4\,°C for the fresh water respectively. Therefore, the warm water at the surface (say, having the temperature 2\,°C) is more dense than the cold water (say, at 1\,°C) underneath and moves down replacing it, thus ensuring that the temperature does not fall below 2--3\,°C all the way to the bottom. This is also the reason why a pond begins to freeze from the surface to the bottom and not the other way around, which would have been catastrophic for the survival of fish and other forms of life in the pond.}.
 \vs p058 1:8 And it was from such seashores of the mild and equable climes of a later age that primitive plant life found its way onto the land. There the high degree of carbon in the atmosphere afforded the new land varieties of life opportunity for speedy and luxuriant growth. Though this atmosphere was then ideal for plant growth, it contained such a high degree of carbon dioxide that no animal, much less man, could have lived on the face of the earth.
 \usection{The Urantia Atmosphere}
-\vs p058 2:1 The planetary atmosphere filters through to the earth about one two\hyp{}billionth of the sun’s total light emanation. If the light falling upon North America were paid for at the rate of 2\,¢/kWh\fnst{In the source text \cite{Stetson1} the rate 1\bibfrac{3}{4}\,¢/kWh is used.}, the annual light bill would be upward of 800 quadrillion\fnst{American quadrillion is $10^{15}$ and British quadrillion is $10^{24}$. In the source text \cite{Stetson1} the figure is 324 quadrillion dollars.} dollars. Chicago’s\fnst{In the source text \cite{Stetson1} we find \bibemph{Greater New York,} presumably substituted by Dr~Sadler's home city of \bibemph{Chicago}.} bill\fnst{See also the text and the note at \bibref[41:5.2]{p041 5:2}.} for sunshine would amount to considerably over \$100,000,000 a day. And it should be remembered that you receive from the sun other forms of energy --- light is not the only solar contribution reaching your atmosphere. Vast solar energies pour in upon Urantia embracing wave lengths ranging both above and below the recognition range of human vision.
-\vs p058 2:2 \pc The earth’s atmosphere is all but opaque to much of the solar radiation at the extreme ultraviolet end of the spectrum. Most of these short wave lengths are absorbed by a layer of ozone which exists throughout a level about 16\,km above the surface of the earth, and which extends spaceward for another 16\,km. The ozone permeating this region, at conditions prevailing on the earth’s surface, would make a layer only 2.5\,mm thick\fnst{The source text \cite{Stetson1} says ``only 2 to 3 millimeters in thickness''. The modern (2000) estimate of the ozone layer thickness over the US is about 3\,mm.}; nevertheless, this relatively small and apparently insignificant amount of ozone protects Urantia inhabitants from the excess of these dangerous and destructive ultraviolet radiations present in sunlight. But were this ozone layer just a trifle thicker, you would be deprived of the highly important and health\hyp{}giving ultraviolet rays which now reach the earth’s surface, and which are ancestral to one of the most essential of your vitamins\fnst{Namely, vitamin~D, so in the source text: Harlan True Stetson, ``Solar Radiation and the State of the Atmosphere'' (1942) \cite{Stetson1}. Note that the publication year of the source text for this part of the Revelation (1942) is long \bibemph{after} the year 1935 given in the colophon of Part~III as the date, when these revelatory narratives were indited and put in the English language.}.
+\vs p058 2:1 The planetary atmosphere filters through to the earth about one two\hyp{}billionth of the sun’s total light emanation. If the light falling upon North America were paid for at the rate of 2\,¢/kWh\fnst{In the source text \cite{Stetson1} the rate 1~\bibfrac{3}{4}\,¢/kWh is used.}, the annual light bill would be upward of 800 quadrillion\fnst{The figure given in the source text \cite{Stetson1} is 324 quadrillion dollars. Note that the American quadrillion is $10^{15}$ and British quadrillion is $10^{24}$.} dollars. Chicago’s\fnst{In the source text \cite{Stetson1} we find \bibemph{Greater New York,} presumably substituted by Dr~Sadler's home city of \bibemph{Chicago}.} bill\fnst{See also the text and the note at \bibref[41:5.2]{p041 5:2}.} for sunshine would amount to considerably over \$100,000,000 a day. And it should be remembered that you receive from the sun other forms of energy --- light is not the only solar contribution reaching your atmosphere. Vast solar energies pour in upon Urantia embracing wave lengths ranging both above and below the recognition range of human vision.
+\vs p058 2:2 \pc The earth’s atmosphere is all but opaque to much of the solar radiation at the extreme ultraviolet end of the spectrum. Most of these short wave lengths are absorbed by a layer of ozone which exists throughout a level about 16\,km above the surface of the earth, and which extends spaceward for another 16\,km. The ozone permeating this region, at conditions prevailing on the earth’s surface, would make a layer only 2.5\,mm thick\fnst{The source text \cite{Stetson1} says ``only 2 to 3 millimeters in thickness''. The modern (2000) estimate of the ozone layer thickness over the US is about 3\,mm.}; nevertheless, this relatively small and apparently insignificant amount of ozone protects Urantia inhabitants from the excess of these dangerous and destructive ultraviolet radiations present in sunlight. But were this ozone layer just a trifle thicker, you would be deprived of the highly important and health\hyp{}giving ultraviolet rays which now reach the earth’s surface, and which are ancestral to one of the most essential of your vitamins\fnst{Namely, vitamin~D, so in the source text: Harlan True Stetson, ``Solar Radiation and the State of the Atmosphere'' (1942) \cite{Stetson1}. Note that the publication year of the source text for this part of the Revelation (1942) is seven years \bibemph{after} the year 1935 given in the colophon of Part~III as the date, when these revelatory narratives were indited and put in the English language.}.
 \vs p058 2:3 And yet some of the less imaginative of your mortal mechanists insist on viewing material creation and human evolution as an accident. The Urantia midwayers have assembled over 50,000 facts of physics and chemistry which they deem to be incompatible with the laws of accidental chance, and which they contend unmistakably demonstrate the presence of intelligent purpose in the material creation. And all of this takes no account of their catalogue of more than 100,000 findings outside the domain of physics and chemistry which they maintain prove the presence of mind in the planning, creation, and maintenance of the material cosmos.
 \vs p058 2:4 Your sun pours forth a veritable flood of death\hyp{}dealing rays, and your pleasant life on Urantia is due to the “fortuitous” influence of more than two\hyp{}score apparently accidental protective operations similar to the action of this unique ozone layer.
 \vs p058 2:5 Were it not for the “blanketing” effect of the atmosphere at night, heat would be lost by radiation so rapidly that life would be impossible of maintenance except by artificial provision.
-\vs p058 2:6 \pc The lower 8 or 10\,km of the earth’s atmosphere is the troposphere; this is the region of winds and air currents which provide weather phenomena. Above this region is the inner ionosphere and next above is the stratosphere. Ascending from the surface of the earth, the temperature steadily falls for 9 or 12\,km, at which height it registers around -57\,°C\fnst{The source text \cite{Stetson1} says -55\,°C.}. This temperature range of from -54\,°C to -57\,°C is unchanged in the further ascent for 64\,km\fnst{The source text says 30 miles, which is 48\,km.}; this realm of constant temperature is the stratosphere. At a height of 72 or 80\,km, the temperature begins to rise, and this increase continues until, at the level of the auroral displays, a temperature of 649\,°C\fnst{In the source text \cite{Stetson1} the value of 1000\,°C is used.} is attained, and it is this intense heat that ionizes the oxygen. But temperature in such a rarefied atmosphere is hardly comparable with heat reckoning at the surface of the earth. Bear in mind that 50\% of all your atmosphere is to be found in the first 5\,km. The height of the earth’s atmosphere is indicated by the highest auroral streamers --- about 643\,km\fnst{The source text \cite{Stetson1} says ``600 kilometers or more''.}.
+\vs p058 2:6 \pc The lower 8 or 10\,km of the earth’s atmosphere is the troposphere; this is the region of winds and air currents which provide weather phenomena. Above this region is the inner ionosphere and next above is the stratosphere. Ascending from the surface of the earth, the temperature steadily falls for 9 or 12\,km, at which height it registers around -57\,°C\fnst{The source text \cite{Stetson1} says -55\,°C.}. This temperature range of from -54\,°C to -57\,°C is unchanged in the further ascent for 64\,km\fnst{The source text \cite{Stetson1} says 30 miles, which is 48\,km.}; this realm of constant temperature is the stratosphere. At a height of 72 or 80\,km, the temperature begins to rise, and this increase continues until, at the level of the auroral displays, a temperature of 649\,°C\fnst{In the source text \cite{Stetson1} the value of 1000\,°C is used.} is attained, and it is this intense heat that ionizes the oxygen. But temperature in such a rarefied atmosphere is hardly comparable with heat reckoning at the surface of the earth. Bear in mind that 50\% of all your atmosphere is to be found in the first 5\,km. The height of the earth’s atmosphere is indicated by the highest auroral streamers --- about 643\,km\fnst{The source text \cite{Stetson1} says ``600 kilometers or more''.}.
 \vs p058 2:7 Auroral phenomena are directly related to sunspots, those solar cyclones which whirl in opposite directions above and below the solar equator, even as do the terrestrial tropical hurricanes. Such atmospheric disturbances whirl in opposite directions\fnst{This is due to the direction of the Coriolis force $\vec{F}_{cor} = 2m\vec{v}\times\vec{\omega}$, see the figure.} when occurring above or below the equator.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.5\columnwidth]{images/Coriolis-Effect.png}\caption{Coriolis effect}\end{figure}}
 \vs p058 2:8 The power of sunspots to alter light frequencies shows that these solar storm centres function as enormous magnets. Such magnetic fields are able to hurl charged particles from the sunspot craters out through space to the earth’s outer atmosphere, where their ionizing influence produces such spectacular auroral displays. Therefore do you have the greatest auroral phenomena when sunspots are at their height --- or soon thereafter --- at which time the spots are more generally equatorially situated.
 \vs p058 2:9 Even the compass needle is responsive to this solar influence since it turns slightly to the east as the sun rises and slightly to the west as the sun nears setting. This happens every day, but during the height of sunspot cycles this variation of the compass is twice as great. These diurnal wanderings of the compass are in response to the increased ionization of the upper atmosphere, which is produced by the sunlight.
