Make building Bibliography optional and decrease interlinear skip for 8" eInk

--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -198,9 +198,11 @@
 \vsetoff
 \vs p000 12:14 [Indited by an Orvonton Divine Counsellor, Chief of the Corps of Superuniverse Personalities assigned to portray on Urantia the truth concerning the Paradise Deities and the universe of universes.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Hartshorne1}
 Charles Hartshorne.
 {``Man's Vision of God and the Logic of Theism.''}
 {\em Chicago: Willett, Clark \&\ Company}, 1941.
 \end{thebibliography}
+}
