--- a/tex/p001.tex
+++ b/tex/p001.tex
@@ -86,6 +86,7 @@
 \vsetoff
 \vs p001 7:9 [Presented by a Divine Counsellor, a member of a group of celestial personalities assigned by the Ancients of Days on Uversa, the headquarters of the seventh superuniverse, to supervise those portions of this forthcoming revelation which have to do with affairs beyond the borders of the local universe of Nebadon. I am commissioned to sponsor those papers portraying the nature and attributes of God because I represent the highest source of information available for such a purpose on any inhabited world. I have served as a Divine Counsellor in all seven of the superuniverses and have long resided at the Paradise centre of all things. Many times have I enjoyed the supreme pleasure of a sojourn in the immediate personal presence of the Universal Father. I portray the reality and truth of the Father’s nature and attributes with unchallengeable authority; I know whereof I speak.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Knudson1}
 Albert C. Knudson.
@@ -100,3 +101,4 @@ J.R. Illingworth, M.A.
 {<<Personality Human and Divine>>.}
 {\em London and New York: The Macmillan Company}, 1894.
 \end{thebibliography}
+}
