--- a/tex/p003.tex
+++ b/tex/p003.tex
@@ -82,6 +82,7 @@
 \vsetoff
 \vs p003 6:9 [Being the Divine Counsellor assigned to the presentation of the revelation of the Universal Father, I have continued with this statement of the attributes of Deity.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Knudson1}
 Albert C. Knudson.
@@ -96,3 +97,4 @@ Edwin Lewis
 {<<A Plea for the Reality, Adequacy and Availability of God>>.}
 {\em New York: The Abingdon Press.}, 1931.
 \end{thebibliography}
+}
