--- a/tex/p004.tex
+++ b/tex/p004.tex
@@ -59,6 +59,7 @@
 \vsetoff
 \vs p004 5:8 [Presented by a Divine Counsellor of Uversa.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Knudson1}
 Albert C. Knudson.
@@ -69,3 +70,4 @@ William Ernest Hocking.
 {<<The Meaning of God in Human Experience: A Philosophic Study of Religion>>}
 {\em New Haven: Yale University Press}, 1912.
 \end{thebibliography}
+}
