--- a/tex/p005.tex
+++ b/tex/p005.tex
@@ -85,6 +85,7 @@
 \vsetoff
 \vs p005 6:14 [This is the fifth and last of the series presenting the narrative of the Universal Father by a Divine Counsellor of Uversa.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Strong1}
 Rev.~Josiah Strong, D.D.
@@ -99,3 +100,4 @@ J.R. Illingworth, M.A.
 {<<Personality Human and Divine>>.}
 {\em London and New York: The Macmillan Company}, 1894.
 \end{thebibliography}
+}
