--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -134,6 +134,7 @@
 \vsetoff
 \vs p012 9:7 [Presented by a Perfector of Wisdom acting by authority of the Ancients of Days.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Baker1}
 Robert H. Baker, Ph.D.
@@ -152,3 +153,4 @@ Sir Arthur S.~Eddington.
 {<<Space, Time and Gravitation, An Outline of the General Relativity Theory.>>}
 {\em Cambridge University Press}, 1920.
 \end{thebibliography}
+}
