--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -205,6 +205,7 @@
 \vsetoff
 \vs p015 14:10 [Presented by a Universal Censor hailing from Uversa.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Eddington1}
 Sir Arthur Stanley Eddington.
@@ -223,3 +224,4 @@ W.F.G.~Swann.
 {``The Architecture of the Universe''}
 {\em New York: The Macmillan Company}, 1934.
 \end{thebibliography}
+}
