--- a/tex/p016.tex
+++ b/tex/p016.tex
@@ -138,6 +138,7 @@
 \vsetoff
 \vs p016 9:16 [Sponsored by a Universal Censor from Uversa.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Griffiths1}
 Rees Griffiths.
@@ -148,3 +149,4 @@ Max Schoen.
 {<<A Scientific Basis for Moral Action>>.}
 {\em The Scientific Monthly, Vol.\,48, No.\,3}, March 1939.
 \end{thebibliography}
+}
