--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -101,6 +101,7 @@
 \vsetoff
 \vs p041 10:6 [Presented by an Archangel in collaboration with the Chief of Nebadon Power Centres.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Eddington1}
 A.S.~Eddington
@@ -119,3 +120,4 @@ A.A.~Vlasov.
 {``Nonlocal Statistical Mechanics'' (in Russian)}
 {\em Moscow}, 1978.
 \end{thebibliography}
+}
