--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -164,6 +164,7 @@
 \vsetoff
 \vs p042 12:16 [Presented by a Mighty Messenger on duty in Nebadon and by the request of Gabriel.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Eddington1}
 A.S.~Eddington
@@ -186,3 +187,4 @@ F.J.~Dyson
 {\em Phys. Rev.}
 {85, 631}, 1952.
 \end{thebibliography}
+}
