--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -114,6 +114,7 @@
 \vsetoff
 \vs p057 8:27 [Presented by a Life Carrier, a member of the original Urantia Corps and now a resident observer.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Jeans1}
 J.~Jeans.
@@ -124,3 +125,4 @@ H.~Jeffreys.
 {``The Earth, Its Origin, History and Physical Constitution''}
 {\em Cambridge: University Press}, 1929.
 \end{thebibliography}
+}
