--- a/tex/p058.tex
+++ b/tex/p058.tex
@@ -73,6 +73,7 @@
 \vsetoff
 \vs p058 7:13 [Presented by a member of the Urantia Life Carrier Corps now resident on the planet.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Stetson1}
 Harlan True~Stetson.
@@ -83,3 +84,4 @@ Robert Andrews~Millikan.
 {``Electrons ($+$ and $-$), Protons, Photons, Neutrons, and Cosmic Rays''}
 {\em Chicago: The University of Chicago Press}, 1935.
 \end{thebibliography}
+}
