--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -57,6 +57,9 @@
 % comment out to not include the Bible text
 \tunemarkuptag{bible}
 
+% uncomment to disable Bibliographies
+\tunemarkuptag{nobiblio}
+
 \setdefaultlanguage{english}
 
 \newif\ifmultivol
@@ -820,8 +823,8 @@
 \renewcommand{\bibtocfont}{\fontsize{8.6}{15}\selectfont}
 \newcommand{\minitocfontsize}{\headingfont\fontsize{9.2}{9.2}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{14}{16}\selectfont}
-\newcommand{\bibbookend}{\fontsize{17}{20}\selectfont}
-\newcommand{\urantiamainfontsize}{17/20}
+\newcommand{\bibbookend}{\fontsize{17}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{17/19}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{25}{25}\selectfont}%
 \newcommand{\introfontsize}{\bibbookend}
 }
