--- a/tex/p002.tex
+++ b/tex/p002.tex
@@ -82,6 +82,7 @@
 \vsetoff
 \vs p002 7:13 [Presented by a Divine Counsellor acting by authority of the Ancients of Days on Uversa.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Knudson1}
 Albert C. Knudson.
@@ -96,3 +97,4 @@ H.A. Overstreet
 {<<The Enduring Question: A Search for a Philosophy of Life>>.}
 {\em New York: W. Norton \&\ Company, Inc.}, 1931.
 \end{thebibliography}
+}
