Enable building Bibliography by default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -58,7 +58,7 @@
 \tunemarkuptag{bible}
 
 % uncomment to disable Bibliographies
-\tunemarkuptag{nobiblio}
+%\tunemarkuptag{nobiblio}
 
 \setdefaultlanguage{english}
 
