Add a note on the energy sources and tidy up an old note

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -67,8 +67,8 @@
 \vs p041 6:7 \pc It should be remembered that spectral analyses show only sun\hyp{}surface compositions. For example: Solar spectra exhibit many iron lines, but iron is not the chief element in the sun. This phenomenon is almost wholly due to the present temperature of the sun’s surface, a little less than 6,000\,°C, this temperature being very favourable to the registry of the iron spectrum.
 \usection{Sources of Solar Energy}
 \vs p041 7:1 The internal temperature of many of the suns, even your own, is much higher than is commonly believed. In the interior of a sun practically no whole atoms exist; they are all more or less shattered by the intensive X\hyp{}ray bombardment which is indigenous to such high temperatures. Regardless of what material elements may appear in the outer layers of a sun, those in the interior are rendered very similar by the dissociative action of the disruptive X\hyp{}rays. X\hyp{}ray is the great leveler of atomic existence.
-\vs p041 7:2 The surface temperature of your sun is almost 6,000\,°C\fnst{The American text of 1955 says ``6,000 degrees'' and specifies that it refers to ``your Fahrenheit scale''. However, the number 6,000 is clearly taken from p.\,14 of \cite{Eddington1}, where it refers to our Centigrade (Celsius) scale, as is indicated in the Preface on p.~6 of this work. Therefore, the modern estimates of the temperature of our Sun's photosphere (5,778\,K) are in agreement with the value given in this Revelation, as long as the units discrepancy is taken into count. What happened here is that Dr~Sadler quoted the text of \cite{Eddington1}, but forgot about the warning given concerning the units in the Preface thereof. Exactly the same situation occurred with the ``English vs American billions'' issue below, see \bibref[41:9.3]{p041 9:3}.}, but it rapidly increases as the interior is penetrated until it attains the unbelievable height of about 35,000,000\,°C in the central regions. (All of these temperatures refer to your Celsius\fnst{In 1955 text ``Fahrenheit''. However, it is now perfectly clear that these temperatures were taken from Eddington's book ``Stars and Atoms'' \cite{Eddington1} without converting the units from Celsius to Fahrenheit.} scale.)
-\vs p041 7:3 \pc All of these phenomena are indicative of enormous energy expenditure, and the sources of solar energy, named in the order of their importance, are:
+\vs p041 7:2 The surface temperature of your sun is almost 6,000\,°C\fnst{The American text of 1955 says ``6,000 degrees'' and specifies that it refers to ``your Fahrenheit scale''. However, the number 6,000 is clearly taken from p.\,14 of \cite{Eddington1}, where it refers to our Celsius scale, as indicated in the Preface on p.~6 of this work. Therefore, the modern estimates of the temperature of our Sun's photosphere (5,778\,K) are in agreement with the value given in this Revelation, as long as the units discrepancy is taken into count. What happened here is that Dr~Sadler quoted the text of \cite{Eddington1}, but forgot about the warning given concerning the units in the Preface thereof. Exactly the same situation occurred with the ``English vs American billions'' issue below, see \bibref[41:9.3]{p041 9:3}.}, but it rapidly increases as the interior is penetrated until it attains the unbelievable height of about 35,000,000\,°C in the central regions. (All of these temperatures refer to your Celsius\fnst{In 1955 text ``Fahrenheit''. However, it is now perfectly clear that these temperatures were taken from Eddington's book ``Stars and Atoms'' \cite{Eddington1} without converting the units from Celsius to Fahrenheit.} scale.)
+\vs p041 7:3 \pc All of these phenomena are indicative of enormous energy expenditure, and the sources of solar energy, named in the order of their importance, are\fnst{In the following list the item \#1 was suggested by Professor Jeans and \#2 by Professor Eddington (see \cite{Jeans2}). The items \#4 and \#5 were known back in XIX century. The items \#3 and \#6 are unknown to science, whereas \#7 is known, but considered insignificant.}:
 \vs p041 7:4 \ublistelem{1.}\bibnobreakspace Annihilation of atoms and, eventually, of electrons.
 \vs p041 7:5 \ublistelem{2.}\bibnobreakspace Transmutation of elements, including the radioactive group of energies thus liberated.
 \vs p041 7:6 \ublistelem{3.}\bibnobreakspace The accumulation and transmission of certain universal space\hyp{}energies.
@@ -115,6 +115,10 @@ A.S.~Eddington
 J.~Jeans.
 {``Through Space and Time''}
 {\em Cambridge: University Press}, 1934.
+\bibitem{Jeans2}
+J.~Jeans.
+{``Cosmogony'' in ``Evolution in the Light of Modern Knowledge''}
+{\em Blackie and Son Limited, London}, 1925.
 \bibitem{Vlasov1}
 A.A.~Vlasov.
 {``Nonlocal Statistical Mechanics'' (in Russian)}
