Add the source for Jeans' Cosmogony.

--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -50,7 +50,7 @@
 \vs p057 5:1 \bibemph{5,000,000,000} years ago your sun was a comparatively isolated blazing orb, having gathered to itself most of the near\hyp{}by circulating matter of space, remnants of the recent upheaval which attended its own birth.
 \vs p057 5:2 Today, your sun has achieved relative stability, but its 11½ year sunspot cycles betray that it was a variable star in its youth. In the early days of your sun the continued contraction and consequent gradual increase of temperature initiated tremendous convulsions on its surface. These titanic heaves required 3½ days to complete a cycle of varying brightness. This variable state, this periodic pulsation, rendered your sun highly responsive to certain outside influences which were to be shortly encountered.
 \vs p057 5:3 Thus was the stage of local space set for the unique origin of \bibemph{Monmatia,} that being the name of your sun’s planetary family, the solar system to which your world belongs. Less than 1\% of the planetary systems of Orvonton have had a similar origin.
-\vs p057 5:4 \pc \bibemph{4,500,000,000} years ago the enormous Angona system began its approach to the neighbourhood of this solitary sun. The centre of this great system was a dark giant of space, solid, highly charged, and possessing tremendous gravity pull.
+\vs p057 5:4 \pc \bibemph{4,500,000,000} years ago\fnst{The origin of the Solar System described here closely matches the one given by James Jeans in \cite{Jeans2}.} the enormous Angona system began its approach to the neighbourhood of this solitary sun. The centre of this great system was a dark giant of space, solid, highly charged, and possessing tremendous gravity pull.
 \vs p057 5:5 As Angona more closely approached the sun, at moments of maximum expansion during solar pulsations, streams of gaseous material were shot out into space as gigantic solar tongues. At first these flaming gas tongues would invariably fall back into the sun, but as Angona drew nearer and nearer, the gravity pull of the gigantic visitor became so great that these tongues of gas would break off at certain points, the roots falling back into the sun while the outer sections would become detached to form independent bodies of matter, solar meteorites, which immediately started to revolve about the sun in elliptical orbits of their own.
 \vs p057 5:6 As the Angona system drew nearer, the solar extrusions grew larger and larger; more and more matter was drawn from the sun to become independent circulating bodies in surrounding space. This situation developed for about 500,000 years until Angona made its closest approach to the sun; whereupon the sun, in conjunction with one of its periodic internal convulsions, experienced a partial disruption; from opposite sides and simultaneously, enormous volumes of matter were disgorged. From the Angona side there was drawn out a vast column of solar gases, rather pointed at both ends and markedly bulging at the centre, which became permanently detached from the immediate gravity control of the sun.
 \vs p057 5:7 This great column of solar gases which was thus separated from the sun subsequently evolved into the 12 planets of the solar system. The repercussional ejection of gas from the opposite side of the sun in tidal sympathy with the extrusion of this gigantic solar system ancestor, has since condensed into the meteors and space dust of the solar system, although much, very much, of this matter was subsequently recaptured by solar gravity as the Angona system receded into remote space.
@@ -120,6 +120,10 @@
 J.~Jeans.
 {``The Universe Around Us''}
 {\em Cambridge: University Press}, 1929.
+\bibitem{Jeans2}
+J.~Jeans.
+{``Cosmogony'' in ``Evolution in the Light of Modern Knowledge''}
+{\em Blackie and Son Limited, London}, 1925.
 \bibitem{Jeffreys1}
 H.~Jeffreys.
 {``The Earth, Its Origin, History and Physical Constitution''}
